Adding documentation on how to contribute to the localization + finishing FR translation

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,8 @@
     ('/', 'home', _('Home') ),
     ('/fpNoJS', 'fp', _('My fingerprint') ),
     ('/tor', 'tor', 'Tor' ),
-    ('/globalStats', 'globalStats', 'Global statistics' ),
-    ('/customStats', 'customStats', 'Custom statistics' ),
+    ('/globalStats', 'globalStats', _('Global statistics') ),
+    ('/customStats', 'customStats', _('Custom statistics') ),
     ('/faq', 'faq', _('FAQ') )
 ] -%}
 {% set active_page = active_page|default('index') -%}
