--- a/templates/fp.html
+++ b/templates/fp.html
@@ -16,9 +16,9 @@
     <br>
 
     <h1>
-        Results &nbsp;
+        {{ _('Results') }} &nbsp;
         <a id="dlBtn" type="button" class="btn btn-default btn-md disabled">
-            <span class="glyphicon glyphicon-download" aria-hidden="true"></span> Download as JSON
+            <span class="glyphicon glyphicon-download" aria-hidden="true"></span> {{ _('Download as JSON') }}
         </a>
     </h1>
     <div class="panel panel-default">
@@ -29,7 +29,7 @@
                     <th>{{ _('Name') }}</th>
                     <th>{{ _('Value') }}</th>
                     <th><a href="#" id="httpPerHeader" data-toggle="tooltip">%</a></th>
-                    <th id="httpAcc" style="display:none;" align="center">Acceptable value</th>
+                    <th id="httpAcc" style="display:none;" align="center">{{ _('Acceptable value') }}</th>
                 </tr>
             </thead>
             <tbody id="headers">
@@ -55,7 +55,7 @@
                     <th>{{ _('Name') }}</th>
                     <th>{{ _('Value') }}</th>
                     <th><a href="#" id="JSPerHeader" data-toggle="tooltip">%</a></th>
-                    <th id="JSAcc" style="display:none;" align="center">Acceptable value</th>
+                    <th id="JSAcc" style="display:none;" align="center">{{ _('Acceptable value') }}</th>
                 </tr>
             </thead>
             <tbody id="attributes">
