--- a/templates/tor.html
+++ b/templates/tor.html
@@ -5,8 +5,23 @@
     Tor - FP Central
 {% endblock %}
 
+{% block head %}
+    {{ super() }}
+    <style type="text/css">
+     /* Icon when the collapsible content is shown */
+    .btn:after {
+        font-family: "Glyphicons Halflings";
+        content: "\e114";
+    }
+    /* Icon when the collapsible content is hidden */
+    .btn.collapsed:after {
+        content: "\e080";
+    }
+    </style>
+{% endblock %}
+
 {% block content %}
-    <h1>Acceptable fingerprint</h1>
+    <h1>Acceptable values for the Tor browser</h1>
     <p>
         The approach of the Tor browser towards browser fingerprinting is simple. The exposed fingerprints should be as
         uniform as possible so that no browser can be uniquely identifiable. Many modifications have already been made
@@ -14,77 +29,129 @@
         wide range of configurations.
     </p>
     <p>
-        On this page, several checks are performed to find out if your browser fingerprint is an "acceptable" one, i.e.
-        it follows Tor basic guidelines. If it is, this would mean that your fingerprint is not distinguishable from
+        On this page, several checks are performed to find out if several attributes of your browser fingerprint are "acceptable", i.e.
+        they follow Tor basic guidelines. If they, this would mean that your fingerprint is not distinguishable from
         the majority of Tor users, thus increasing your online privacy.
     </p>
     <h2>Results</h2>
-    <h4>Screen resolution <br> <span id="screen"></span> <span id="screenRes" class="glyphicon"></span></h4>
-    <div id="screenOk" style="display: none">
-        Your Tor browser is at one of the recommended sizes!
-    </div>
-    <div id="screenNotOk" style="display: none">
-        Your Tor browser is not at the recommended size. It should be either at 1000x1000 or at a multiple of 200x100.
-        The easiest way to fix the resolution difference is to launch a new Tor identity and <strong>not</strong>
-        change the size of the browser's window. The developer's console should also be closed since it has a direct
-        impact on the reported screen dimensions.
 
-        The only step required is to open the Onion menu on the left of the URL address bar and click on "New identity".
-        You will clean your browser state and start from a fresh profile.
-        <img src="{{ url_for('static', filename="images/identity.png") }}" class="img-responsive" alt="Responsive image">
-    </div>
-    <div id="screenNoJS" style="display: block">
-        No JavaScript.
-    </div>
+    <div class="panel-group">
 
-    <h4>Plugins <br> <span id="plugins"></span> <span id="pluginsRes" class="glyphicon"></span></h4>
-    <div id="pluginsOk" style="display: none">
-        No plugins were detected!
-    </div>
-    <div id="pluginsNotOk" style="display: none">
-        Your Tor browser has some browser plugins enabled and it can harm your online privacy. It is recommended
-        <a href="https://www.torproject.org/download/download.html.en#Warning">not to enable or install any plugins</a>
-        because they can be used to reveal your real IP address or identifying information on your system.
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title" style="font-size: 14px">
+                    <a data-toggle="collapse" href="#screenPanel"><strong>Screen resolution</strong></a>
+                    <span id="screen"></span> <span id="screenRes" class="glyphicon"></span>
+
+                    <button type="button" class="btn btn-primary btn-xs collapsed" data-toggle="collapse" data-target="#screenPanel" style="float: right">
+                        Details
+                    </button>
+
+                </h4>
+            </div>
+            <div id="screenPanel" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <div id="screenOk" style="display: none">
+                    Your Tor browser is at one of the recommended sizes!
+                    </div>
+                    <div id="screenNotOk" style="display: none">
+                        Your Tor browser is not at the recommended size. It should be either at 1000x1000 or at a multiple of 200x100.
+                        The easiest way to fix the resolution difference is to launch a new Tor identity and <strong>not</strong>
+                        change the size of the browser's window. The developer's console should also be closed since it has a direct
+                        impact on the reported screen dimensions.
+
+                        The only step required is to open the Onion menu on the left of the URL address bar and click on "New identity".
+                        You will clean your browser state and start from a fresh profile.
+                        <img src="{{ url_for('static', filename="images/identity.png") }}" class="img-responsive" alt="Responsive image">
+                    </div>
+                    <div id="screenNoJS" style="display: block">
+                        No JavaScript.
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <br><br>
-        Two steps are required to easily disable plugins in the Tor browser. First, click on "Privacy and Security
-        settings..." in the Onion menu.
-        <img src="{{ url_for('static', filename="images/settings1.png") }}" class="img-responsive" alt="Responsive image">
-        Then, make sure that "Disable browser plugins (such as Flash)" option is checked.
-        <img src="{{ url_for('static', filename="images/settings2.png") }}" class="img-responsive" alt="Responsive image">
-    </div>
-    <div id="pluginsNoJS" style="display: block">
-        No JavaScript.
-    </div>
 
-    <br><br>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title" style="font-size: 14px">
+                    <a data-toggle="collapse" href="#pluginsPanel"><strong>Plugins</strong></a>
+                    <span id="plugins"></span> <span id="pluginsRes" class="glyphicon"></span>
 
-    <h1>Security slider</h1>
-    <div id="sliderLow" style="display: none">
-        We detected that the security level of your Tor browser is set on low.
-        Did you know that you can easily set the security level of your browser in the browser settings?<br>
+                    <button type="button" class="btn btn-primary btn-xs collapsed" data-toggle="collapse" data-target="#pluginsPanel" style="float: right">
+                        Details
+                    </button>
 
-        Open the Onion menu located on the left of the URL address bar and click on "Privacy and Security settings...".
-        <img src="{{ url_for('static', filename="images/settings1.png") }}" class="img-responsive" alt="Responsive image">
+                </h4>
+            </div>
+            <div id="pluginsPanel" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <div id="pluginsOk" style="display: none">
+                        No plugins were detected!
+                    </div>
+                    <div id="pluginsNotOk" style="display: none">
+                        Your Tor browser has some browser plugins enabled and it can harm your online privacy. It is recommended
+                        <a href="https://www.torproject.org/download/download.html.en#Warning">not to enable or install any plugins</a>
+                        because they can be used to reveal your real IP address or identifying information on your system.
+                        <br><br>
+                        Two steps are required to easily disable plugins in the Tor browser. First, click on "Privacy and Security
+                        settings..." in the Onion menu.
+                        <img src="{{ url_for('static', filename="images/settings1.png") }}" class="img-responsive" alt="Responsive image">
+                        Then, make sure that "Disable browser plugins (such as Flash)" option is checked.
+                        <img src="{{ url_for('static', filename="images/settings2.png") }}" class="img-responsive" alt="Responsive image">
+                    </div>
+                    <div id="pluginsNoJS" style="display: block">
+                        No JavaScript.
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        Then, you can see the Security slider which provides a user-friendly interface to set your own security level.
-        <img src="{{ url_for('static', filename="images/settings3.png") }}" class="img-responsive" alt="Responsive image">
+        <br><br>
 
-        You can easily see the trade off between functionality and security. Gradually increasing the security level will
-        disable more and more features reducing the vulnerability surface of your browser.
-    </div>
-    <div id="sliderMediumLow" style="display: none">
-        We detected that the security level of your Tor browser is set on "Medium-Low".
-        Why not try a higher security level to increase your online privacy?
-    </div>
-    <div id="sliderMediumHigh" style="display: none">
-        We detected that the security level of your Tor browser is set on "Medium-High".
-        Why not try a higher security level to increase your online privacy?
-    </div>
-    <div id="sliderHigh" style="display: none">
-        We detected that you are on the highest security level in your Tor browser!
-    </div>
-    <div id="sliderNoJS" style="display: block">
-        JavaScript is disabled in your browser. Enable it to know the level of your security slider.
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title" style="font-size: 14px">
+                    <a data-toggle="collapse" href="#sliderPanel"><strong>Security slider</strong></a>
+                    <button type="button" class="btn btn-primary btn-xs collapsed" data-toggle="collapse" data-target="#sliderPanel" style="float: right">
+                        Details
+                    </button>
+                </h4>
+            </div>
+            <div id="sliderPanel" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <div id="sliderLow" style="display: none">
+                        We detected that the security level of your Tor browser is set on "Low".
+                        Did you know that you can easily set the security level of your browser in the browser settings?<br>
+
+                        Open the Onion menu located on the left of the URL address bar and click on "Privacy and Security settings...".
+                        <img src="{{ url_for('static', filename="images/settings1.png") }}" class="img-responsive" alt="Responsive image">
+
+                        Then, you can see the Security slider which provides a user-friendly interface to set your own security level.
+                        <img src="{{ url_for('static', filename="images/settings3.png") }}" class="img-responsive" alt="Responsive image">
+
+                        You can easily see the trade off between functionality and security. Gradually increasing the security level will
+                        disable more and more features reducing the vulnerability surface of your browser.
+                    </div>
+                    <div id="sliderMediumLow" style="display: none">
+                        We detected that the security level of your Tor browser is set on "Medium-Low".
+                        Why not try a higher security level to increase your online privacy?
+                    </div>
+                    <div id="sliderMediumHigh" style="display: none">
+                        We detected that the security level of your Tor browser is set on "Medium-High".
+                        Why not try a higher security level to increase your online privacy?
+                    </div>
+                    <div id="sliderHigh" style="display: none">
+                        We detected that you are on the highest security level in your Tor browser!
+                    </div>
+                    <div id="sliderNoJS" style="display: block">
+                        JavaScript is disabled in your browser. Enable it to know the level of your security slider.
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- Elements to detect the level of the security slider -->
