--- a/templates/faq.html
+++ b/templates/faq.html
@@ -25,7 +25,7 @@
                 <td>{{ def.description }}</td>
                 <td>
                     {%  if def.URL is defined %}
-                    <a href="{{ def.URL }}"><span class="glyphicon glyphicon-link"></span></a>
+                    <a href="{{ def.URL }}" target="_blank"><span class="glyphicon glyphicon-new-window"></span></a>
                     {% endif %}
                 </td>
             </tr>
