Updating the text of a tour stop in the FP page

--- a/templates/fp.html
+++ b/templates/fp.html
@@ -16,7 +16,7 @@
 
     <h1>My fingerprint</h1>
     <p>
-        On this page, you can visualize your own browser fingerprint. You can run a series of JavaScript tests and see what your browser engine returns.
+        On this page, you can visualize your own browser fingerprint. You can run a series of tests and see what your browser engine returns in the tables below.
         The server can also computes statistics to help you understand how unique your fingerprint can be with respect to other users.
         The <a href="/faq" target="_blank">FAQ page <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a> gives a detailed list of
         attributes that are collected along with links to documentation.
