Changing from Glyphicon to FontAwesome

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -25,7 +25,7 @@
                 <td>{{ def.description }}</td>
                 <td>
                     {%  if def.URL is defined %}
-                    <a href="{{ def.URL }}" target="_blank"><span class="glyphicon glyphicon-new-window"></span></a>
+                    <a href="{{ def.URL }}" target="_blank"><i class="gfa fa-external-link" aria-hidden="true"></i></a>
                     {% endif %}
                 </td>
             </tr>
