--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
     {%- block styles %}
     <!-- Bootstrap core CSS  (Bootswatch Sandstone Theme) -->
     <link href="{{url_for('static', filename='external/bootstrap/css/bootstrap-sandstone.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static', filename='external/font-awesome/css/font-awesome.min.css')}}" rel="stylesheet">
     <!-- Custom theme -->
     <link href="{{url_for('static', filename='css/theme.css')}}" rel="stylesheet">
     {%- endblock styles %}
