--- a/templates/tor.html
+++ b/templates/tor.html
@@ -10,12 +10,12 @@
     <style type="text/css">
      /* Icon when the collapsible content is shown */
     .btn:after {
-        font-family: "Glyphicons Halflings";
-        content: "\e114";
+        font-family: "FontAwesome";
+        content: "\f078";
     }
     /* Icon when the collapsible content is hidden */
     .btn.collapsed:after {
-        content: "\e080";
+        content: "\f054";
     }
     </style>
 {% endblock %}
@@ -41,7 +41,7 @@
             <div class="panel-heading">
                 <h4 class="panel-title" style="font-size: 14px">
                     <a data-toggle="collapse" href="#screenPanel"><strong>Screen resolution</strong></a>
-                    <span id="screen"></span> <span id="screenRes" class="glyphicon"></span>
+                    <span id="screen"></span> <i id="screenRes" class="fa"></i>
 
                     <button type="button" class="btn btn-primary btn-xs collapsed" data-toggle="collapse" data-target="#screenPanel" style="float: right">
                         Details
@@ -77,7 +77,7 @@
             <div class="panel-heading">
                 <h4 class="panel-title" style="font-size: 14px">
                     <a data-toggle="collapse" href="#pluginsPanel"><strong>Plugins</strong></a>
-                    <span id="plugins"></span> <span id="pluginsRes" class="glyphicon"></span>
+                    <span id="plugins"></span> <i id="pluginsRes" class="fa"></i>
 
                     <button type="button" class="btn btn-primary btn-xs collapsed" data-toggle="collapse" data-target="#pluginsPanel" style="float: right">
                         Details
