Small indication in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     {%- endblock metas %}
 
     {%- block styles %}
-    <!-- Bootstrap core CSS  (Bootswatch Sandstone Theme) -->
+    <!-- Bootstrap core CSS  (Bootswatch Sandstone Theme) + FontAwesome -->
     <link href="{{url_for('static', filename='external/bootstrap/css/bootstrap-sandstone.min.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='external/font-awesome/css/font-awesome.min.css')}}" rel="stylesheet">
     <!-- Custom theme -->
