--- a/templates/faq.html
+++ b/templates/faq.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{ _('List of attributes') }}</h1>
+    <h1>{{ _('What is the current list of collected attributes?') }}</h1>
     <table class="table table-striped table-hover " xmlns="http://www.w3.org/1999/html">
         <thead>
             <tr>
@@ -33,5 +33,7 @@
             {% endfor %}
         </tbody>
     </table>
+
+
 
 {% endblock %}
