Refactoring database functions in run.py + removing Flask-RESTful from dependencies

--- a/templates/fp.html
+++ b/templates/fp.html
@@ -38,7 +38,7 @@
            data-step="7">
             <span class="badge">2</span> <strong>{{ _('Send to server') }}</strong> <i id="sendOk" class="fa"></i>
         </a>
-        <a id="statsBtn" class="btn btn-info disabled" type="button" onclick="api.stats()"
+        <a id="statsBtn" class="btn btn-info disabled" type="button" onclick="api.getNumberFP()"
            data-intro="The final action of the dashboard lets you see how your browser fingerprint compares with other ones. For each attribute, you will see the percentage of
                       fingerprints who share the exact same value as yours."
            data-step="8">
