Adding support for 3 additional percentages on the collection page + addition of a button to switch between percentages

--- a/static/css/fp.css
+++ b/static/css/fp.css
@@ -5,7 +5,20 @@
     cursor: pointer;
 }
 
-.hideAcc tr > *:nth-child(4) {
+.hideAcc tr > *:nth-child(7) {
+    display: none;
+}
+
+.hidePer tr > *:nth-child(3) {
+    display: none;
+}
+.hidePerLimit tr > *:nth-child(4) {
+    display: none;
+}
+.hidePerTotal tr > *:nth-child(5) {
+    display: none;
+}
+.hidePerTotalLimit tr > *:nth-child(6) {
     display: none;
 }
 
@@ -17,15 +30,21 @@
 .tableCustom tr > *:nth-child(1) {
     width: 30%;
 }
-
 .tableCustom tr > *:nth-child(2) {
     width: 50%;
 }
-
 .tableCustom tr > *:nth-child(3){
     width: 8%;
 }
-
-.tableCustom tr > *:nth-child(4) {
+.tableCustom tr > *:nth-child(4){
+    width: 8%;
+}
+.tableCustom tr > *:nth-child(5){
+    width: 8%;
+}
+.tableCustom tr > *:nth-child(6){
+    width: 8%;
+}
+.tableCustom tr > *:nth-child(7) {
     width: 12%;
 }
